# perfdata2vigilo

./: .gitignore  Makefile  Makefile.am  README  README.fr  README.txt  buildout.cfg  configure.ac  general.conf.in  perf2store  perf2store.conf.pm.dist  perfdata2vigilo.in  perfdata2vigilo.pl.in  vigilo-perfdata2vigilo.cfg.in
debian/: changelog  control  copyright  dirs  docs  examples  rules
pkg/: perf2store.mdv.spec  perfdata2vigilo.mandriva.spec  perfdata2vigilo.mdv.spec  perfdata2vigilo.redhat.spec  perfdata2vigilo.rhel6.spec  perfdata2vigilo.rhel7.spec
